added Subscriber nb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -78,7 +78,7 @@
      "data": {
       "text/plain": "{'name': 'Thermostat',\n 'temperature': 20,\n 'humidity': 50,\n 'mode': 'cool',\n 'kb_id': 'http://127.0.0.1:8000/thermostat'}"
      },
-     "execution_count": 76,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# Defining constants\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
@@ -259,14 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "200\n",
-      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/3f6bcf55-9a1d-471f-91aa-716c8bb19fe6\"}\n"
+      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/3b7a5002-a2db-4d93-9bca-97ffc46d5d15\"}\n"
      ]
     }
    ],
@@ -300,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "200\n",
-      "[{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/3f6bcf55-9a1d-471f-91aa-716c8bb19fe6\",\"knowledgeInteractionType\":\"AnswerKnowledgeInteraction\",\"communicativeAct\":{\"requiredPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"],\"satisfiedPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"]},\"graphPattern\":\"?meas <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/saref#Measurement> . ?meas <https://w3id.org/saref#hasValue> ?temp . ?meas <https://w3id.org/saref#isMeasuredIn> <https://w3id.org/saref#TemperatureUnit> . ?meas <https://w3id.org/saref#hasTimestamp> ?timestamp . ?meas <https://w3id.org/saref#isMeasurementOf> ?room_id . ?meas <https://w3id.org/saref#relatesToProperty> <https://w3id.org/saref#Temperature> . ?meas <https://w3id.org/saref#measurementMadeBy> ?device_id . \"}]\n"
+      "[{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/3b7a5002-a2db-4d93-9bca-97ffc46d5d15\",\"knowledgeInteractionType\":\"AnswerKnowledgeInteraction\",\"communicativeAct\":{\"requiredPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"],\"satisfiedPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"]},\"graphPattern\":\"?meas <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/saref#Measurement> . ?meas <https://w3id.org/saref#hasValue> ?temp . ?meas <https://w3id.org/saref#isMeasuredIn> <https://w3id.org/saref#TemperatureUnit> . ?meas <https://w3id.org/saref#hasTimestamp> ?timestamp . ?meas <https://w3id.org/saref#isMeasurementOf> ?room_id . ?meas <https://w3id.org/saref#relatesToProperty> <https://w3id.org/saref#Temperature> . ?meas <https://w3id.org/saref#measurementMadeBy> ?device_id . \"}]\n"
      ]
     }
    ],
@@ -325,14 +325,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "404\n",
-      "{\"messageType\":\"error\",\"message\":\"A Knowledge Base for the given Knowledge-Base-Id cannot be found.\"}\n"
+      "409\n",
+      "{\"messageType\":\"error\",\"message\":\"Only one connection per Knowledge-Base-Id is allowed and we already have one.\"}\n",
+      "{'messageType': 'error', 'message': 'Only one connection per Knowledge-Base-Id is allowed and we already have one.'}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'handleRequestId'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [32]\u001B[0m, in \u001B[0;36m<cell line: 22>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     20\u001B[0m     \u001B[38;5;28mprint\u001B[39m(response\u001B[38;5;241m.\u001B[39mtext)\n\u001B[1;32m     21\u001B[0m     \u001B[38;5;28mprint\u001B[39m(response\u001B[38;5;241m.\u001B[39mjson())\n\u001B[0;32m---> 22\u001B[0m \u001B[43mhandle_and_answer\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Input \u001B[0;32mIn [32]\u001B[0m, in \u001B[0;36mhandle_and_answer\u001B[0;34m()\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28mprint\u001B[39m(response\u001B[38;5;241m.\u001B[39mtext)\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28mprint\u001B[39m(response\u001B[38;5;241m.\u001B[39mjson())\n\u001B[0;32m----> 8\u001B[0m handleRequestId \u001B[38;5;241m=\u001B[39m \u001B[43mresponse\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mjson\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mhandleRequestId\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[1;32m      9\u001B[0m deviceName \u001B[38;5;241m=\u001B[39m response\u001B[38;5;241m.\u001B[39mjson()[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mbindingSet\u001B[39m\u001B[38;5;124m\"\u001B[39m][\u001B[38;5;241m0\u001B[39m][\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdeviceName\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[1;32m     10\u001B[0m answerBindingSet \u001B[38;5;241m=\u001B[39m response\u001B[38;5;241m.\u001B[39mjson()[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mbindingSet\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;66;03m#???\u001B[39;00m\n",
+      "\u001B[0;31mKeyError\u001B[0m: 'handleRequestId'"
      ]
     }
    ],
@@ -342,6 +355,7 @@
     "    response = httpx.get(URL + \"/sc/handle\", headers=HEADERS)\n",
     "    print(response.status_code)\n",
     "    print(response.text)\n",
+    "    print(response.json())\n",
     "\n",
     "    handleRequestId = response.json()[\"handleRequestId\"]\n",
     "    deviceName = response.json()[\"bindingSet\"][0][\"deviceName\"]\n",
@@ -350,12 +364,13 @@
     "    # Answering the handle request\n",
     "    answer_data = {\n",
     "        \"handleRequestId\": handleRequestId,\n",
-    "        \"bindingSet\": bindingSet\n",
+    "        \"bindingSet\": answerBindingSet,\n",
     "    }\n",
     "\n",
     "    response = httpx.post(URL + \"/sc/handle\", headers=HEADERS, json=answer_data)\n",
     "    print(response.status_code)\n",
     "    print(response.text)\n",
+    "    print(response.json())\n",
     "handle_and_answer()"
    ],
    "metadata": {
@@ -373,56 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:     Started server process [4964]\n",
-      "INFO:     Waiting for application startup.\n",
-      "INFO:     Application startup complete.\n",
-      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:     127.0.0.1:50538 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:50538 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:50538 - \"GET / HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:40288 - \"GET /thermostat HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:55934 - \"PUT /thermostat?name=coolboi2000&temperature=200&humidity=200&mode=chill&kb_id=kbid HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:35588 - \"GET /thermostat/name HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:53262 - \"PUT /thermostat/name?name=newname HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:50962 - \"GET /thermostat/temperature HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:57928 - \"PUT /thermostat/temperature?temperature=100 HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:57934 - \"GET /thermostat/humidity HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:47454 - \"PUT /thermostat/humidity?humidity=200 HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:47460 - \"GET /thermostat/mode HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:57420 - \"PUT /thermostat/mode?mode=sleep HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:57430 - \"GET /thermostat/kb_id HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:40196 - \"PUT /thermostat/kb_id?kb_id=kb_id%202 HTTP/1.1\" 200 OK\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:     Shutting down\n",
-      "INFO:     Waiting for application shutdown.\n",
-      "INFO:     Application shutdown complete.\n",
-      "INFO:     Finished server process [4964]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Running the API\n",
     "if __name__ == \"__main__\":\n",
