--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,15 +11,13 @@
     "from fastapi import FastAPI, Depends\n",
     "import uvicorn\n",
     "import nest_asyncio\n",
-    "import random\n",
-    "import json\n",
     "\n",
     "app = FastAPI()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -46,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -78,7 +76,7 @@
      "data": {
       "text/plain": "{'name': 'Thermostat',\n 'temperature': 20,\n 'humidity': 50,\n 'mode': 'cool',\n 'kb_id': 'http://127.0.0.1:8000/thermostat'}"
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -174,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "# Defining constants\n",
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "outputs": [
     {
      "name": "stdout",
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "outputs": [
     {
      "name": "stdout",
@@ -259,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "200\n",
-      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/3b7a5002-a2db-4d93-9bca-97ffc46d5d15\"}\n"
+      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/f2f54847-55be-4102-9c3e-5ae7a08ceba8\"}\n"
      ]
     }
    ],
@@ -300,24 +298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n",
-      "[{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/3b7a5002-a2db-4d93-9bca-97ffc46d5d15\",\"knowledgeInteractionType\":\"AnswerKnowledgeInteraction\",\"communicativeAct\":{\"requiredPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"],\"satisfiedPurposes\":[\"https://w3id.org/knowledge-engine/InformPurpose\"]},\"graphPattern\":\"?meas <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/saref#Measurement> . ?meas <https://w3id.org/saref#hasValue> ?temp . ?meas <https://w3id.org/saref#isMeasuredIn> <https://w3id.org/saref#TemperatureUnit> . ?meas <https://w3id.org/saref#hasTimestamp> ?timestamp . ?meas <https://w3id.org/saref#isMeasurementOf> ?room_id . ?meas <https://w3id.org/saref#relatesToProperty> <https://w3id.org/saref#Temperature> . ?meas <https://w3id.org/saref#measurementMadeBy> ?device_id . \"}]\n"
-     ]
+     "data": {
+      "text/plain": "[{'knowledgeInteractionId': 'http://127.0.0.1:8000/thermostat/interaction/f2f54847-55be-4102-9c3e-5ae7a08ceba8',\n  'knowledgeInteractionType': 'AnswerKnowledgeInteraction',\n  'communicativeAct': {'requiredPurposes': ['https://w3id.org/knowledge-engine/InformPurpose'],\n   'satisfiedPurposes': ['https://w3id.org/knowledge-engine/InformPurpose']},\n  'graphPattern': '?meas <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/saref#Measurement> . ?meas <https://w3id.org/saref#hasValue> ?temp . ?meas <https://w3id.org/saref#isMeasuredIn> <https://w3id.org/saref#TemperatureUnit> . ?meas <https://w3id.org/saref#hasTimestamp> ?timestamp . ?meas <https://w3id.org/saref#isMeasurementOf> ?room_id . ?meas <https://w3id.org/saref#relatesToProperty> <https://w3id.org/saref#Temperature> . ?meas <https://w3id.org/saref#measurementMadeBy> ?device_id . '}]"
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# check if the Knowledge Interaction is registered\n",
     "def list_all_kis():\n",
     "    response = httpx.get(URL + \"/sc/ki\", headers=HEADERS)\n",
-    "    print(response.status_code)\n",
-    "    print(response.text)\n",
-    "list_all_kis()\n"
+    "    return response.json()\n",
+    "list_all_kis()"
    ],
    "metadata": {
     "collapsed": false
@@ -325,41 +322,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "409\n",
-      "{\"messageType\":\"error\",\"message\":\"Only one connection per Knowledge-Base-Id is allowed and we already have one.\"}\n",
-      "{'messageType': 'error', 'message': 'Only one connection per Knowledge-Base-Id is allowed and we already have one.'}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'handleRequestId'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [32]\u001B[0m, in \u001B[0;36m<cell line: 22>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     20\u001B[0m     \u001B[38;5;28mprint\u001B[39m(response\u001B[38;5;241m.\u001B[39mtext)\n\u001B[1;32m     21\u001B[0m     \u001B[38;5;28mprint\u001B[39m(response\u001B[38;5;241m.\u001B[39mjson())\n\u001B[0;32m---> 22\u001B[0m \u001B[43mhandle_and_answer\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Input \u001B[0;32mIn [32]\u001B[0m, in \u001B[0;36mhandle_and_answer\u001B[0;34m()\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28mprint\u001B[39m(response\u001B[38;5;241m.\u001B[39mtext)\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28mprint\u001B[39m(response\u001B[38;5;241m.\u001B[39mjson())\n\u001B[0;32m----> 8\u001B[0m handleRequestId \u001B[38;5;241m=\u001B[39m \u001B[43mresponse\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mjson\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mhandleRequestId\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[1;32m      9\u001B[0m deviceName \u001B[38;5;241m=\u001B[39m response\u001B[38;5;241m.\u001B[39mjson()[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mbindingSet\u001B[39m\u001B[38;5;124m\"\u001B[39m][\u001B[38;5;241m0\u001B[39m][\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdeviceName\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[1;32m     10\u001B[0m answerBindingSet \u001B[38;5;241m=\u001B[39m response\u001B[38;5;241m.\u001B[39mjson()[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mbindingSet\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;66;03m#???\u001B[39;00m\n",
-      "\u001B[0;31mKeyError\u001B[0m: 'handleRequestId'"
+      "200\n",
+      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/f2f54847-55be-4102-9c3e-5ae7a08ceba8\",\"handleRequestId\":1,\"bindingSet\":[],\"requestingKnowledgeBaseId\":\"http://127.0.0.1:8000/subscriber\"}\n",
+      "200\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Start waiting for a handle request for the given Knowledge Base Id.\n",
     "def handle_and_answer():\n",
-    "    response = httpx.get(URL + \"/sc/handle\", headers=HEADERS)\n",
+    "    response = httpx.get(URL + \"/sc/handle\", headers=HEADERS, timeout=None)\n",
     "    print(response.status_code)\n",
     "    print(response.text)\n",
-    "    print(response.json())\n",
-    "\n",
+    "    ki_id = list_all_kis()[-1]['knowledgeInteractionId']\n",
+    "    answer_headers = {\n",
+    "         'Content-Type': 'application/json',\n",
+    "         'Knowledge-Base-Id': thermostat.kb_id,\n",
+    "         'Knowledge-Interaction-Id': ki_id,\n",
+    "    }\n",
     "    handleRequestId = response.json()[\"handleRequestId\"]\n",
-    "    deviceName = response.json()[\"bindingSet\"][0][\"deviceName\"]\n",
-    "    answerBindingSet = response.json()[\"bindingSet\"] #???\n",
+    "    # deviceName = response.json()[\"bindingSet\"][0][\"deviceName\"]\n",
+    "    answerBindingSet = [] #???\n",
     "\n",
     "    # Answering the handle request\n",
     "    answer_data = {\n",
@@ -367,10 +357,9 @@
     "        \"bindingSet\": answerBindingSet,\n",
     "    }\n",
     "\n",
-    "    response = httpx.post(URL + \"/sc/handle\", headers=HEADERS, json=answer_data)\n",
+    "    response = httpx.post(URL + \"/sc/handle\", headers=answer_headers, json=answer_data)\n",
     "    print(response.status_code)\n",
     "    print(response.text)\n",
-    "    print(response.json())\n",
     "handle_and_answer()"
    ],
    "metadata": {
