starting to separate API and SC of ThermostatAPI.ipynb

--- a/shared_data/Subscriber.ipynb
+++ b/shared_data/Subscriber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "# Defining constants\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "outputs": [
     {
      "name": "stdout",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "outputs": [
     {
      "name": "stdout",
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "200\n",
-      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/subscriber/interaction/d1d1bda9-271c-44b3-85e0-176b3a7b012f\"}\n"
+      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/subscriber/interaction/cdc1fb08-6c2d-4067-8fe5-f8d726bfd871\"}\n"
      ]
     }
    ],
@@ -144,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'knowledgeInteractionId': 'http://127.0.0.1:8000/subscriber/interaction/d1d1bda9-271c-44b3-85e0-176b3a7b012f',\n  'knowledgeInteractionType': 'AskKnowledgeInteraction',\n  'communicativeAct': {'requiredPurposes': ['https://w3id.org/knowledge-engine/InformPurpose'],\n   'satisfiedPurposes': ['https://w3id.org/knowledge-engine/InformPurpose']},\n  'graphPattern': '?meas <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/saref#Measurement> . ?meas <https://w3id.org/saref#hasValue> ?temp . ?meas <https://w3id.org/saref#isMeasuredIn> <https://w3id.org/saref#TemperatureUnit> . ?meas <https://w3id.org/saref#hasTimestamp> ?timestamp . ?meas <https://w3id.org/saref#isMeasurementOf> ?room_id . ?meas <https://w3id.org/saref#relatesToProperty> <https://w3id.org/saref#Temperature> . ?meas <https://w3id.org/saref#measurementMadeBy> ?device_id . '}]"
+      "text/plain": "[{'knowledgeInteractionId': 'http://127.0.0.1:8000/subscriber/interaction/cdc1fb08-6c2d-4067-8fe5-f8d726bfd871',\n  'knowledgeInteractionType': 'AskKnowledgeInteraction',\n  'communicativeAct': {'requiredPurposes': ['https://w3id.org/knowledge-engine/InformPurpose'],\n   'satisfiedPurposes': ['https://w3id.org/knowledge-engine/InformPurpose']},\n  'graphPattern': '?meas <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/saref#Measurement> . ?meas <https://w3id.org/saref#hasValue> ?temp . ?meas <https://w3id.org/saref#isMeasuredIn> <https://w3id.org/saref#TemperatureUnit> . ?meas <https://w3id.org/saref#hasTimestamp> ?timestamp . ?meas <https://w3id.org/saref#isMeasurementOf> ?room_id . ?meas <https://w3id.org/saref#relatesToProperty> <https://w3id.org/saref#Temperature> . ?meas <https://w3id.org/saref#measurementMadeBy> ?device_id . '}]"
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,13 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "outputs": [
     {
      "data": {
-      "text/plain": "'http://127.0.0.1:8000/subscriber/interaction/d1d1bda9-271c-44b3-85e0-176b3a7b012f'"
+      "text/plain": "'http://127.0.0.1:8000/subscriber/interaction/cdc1fb08-6c2d-4067-8fe5-f8d726bfd871'"
      },
-     "execution_count": 39,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,14 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "200\n",
-      "{\"bindingSet\":[],\"exchangeInfo\":[{\"initiator\":\"knowledgeBase\",\"knowledgeBaseId\":\"http://127.0.0.1:8000/thermostat\",\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/f2f54847-55be-4102-9c3e-5ae7a08ceba8\",\"exchangeStart\":\"2023-02-24T09:45:36.248+00:00\",\"exchangeEnd\":\"2023-02-24T09:45:36.777+00:00\",\"status\":\"SUCCEEDED\",\"bindingSet\":[]}]}\n"
+      "{\"bindingSet\":[{\"room_id\":\"\\\"1\\\"\",\"temp\":\"\\\"20\\\"\",\"device_id\":\"\\\"id1\\\"\",\"meas\":\"<http://www.example.org/meas1>\",\"timestamp\":\"\\\"2016-12-01T15:31:10-05:00\\\"\"}],\"exchangeInfo\":[{\"initiator\":\"knowledgeBase\",\"knowledgeBaseId\":\"http://127.0.0.1:8000/thermostat\",\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/489aa242-b1e5-4309-9a1d-c464ff068095\",\"exchangeStart\":\"2023-02-24T10:00:19.704+00:00\",\"exchangeEnd\":\"2023-02-24T10:00:20.170+00:00\",\"status\":\"SUCCEEDED\",\"bindingSet\":[{\"room_id\":\"\\\"1\\\"\",\"temp\":\"\\\"20\\\"\",\"device_id\":\"\\\"id1\\\"\",\"meas\":\"<http://www.example.org/meas1>\",\"timestamp\":\"\\\"2016-12-01T15:31:10-05:00\\\"\"}]}]}\n"
      ]
     }
    ],
