--- a/shared_data/Thermostat/ThermostatAPI.ipynb
+++ b/shared_data/Thermostat/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -76,7 +76,7 @@
      "data": {
       "text/plain": "{'name': 'Thermostat',\n 'temperature': 20,\n 'humidity': 50,\n 'mode': 'cool',\n 'kb_id': 'http://127.0.0.1:8000/thermostat'}"
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -131,6 +131,7 @@
     "async def get_kb_id():\n",
     "    return thermostat.kb_id\n",
     "\n",
+    "\n",
     "@app.put(\"/thermostat\")\n",
     "async def set_thermostat(commons: Thermostat = Depends()):\n",
     "    thermostat.name = commons.name\n",
@@ -140,6 +141,7 @@
     "    thermostat.kb_id = commons.kb_id\n",
     "\n",
     "    return thermostat.__dict__\n",
+    "\n",
     "\n",
     "@app.put(\"/thermostat/temperature\")\n",
     "async def set_temperature(temperature: int):\n",
@@ -164,6 +166,7 @@
     "    thermostat.name = name\n",
     "    return thermostat.name\n",
     "\n",
+    "\n",
     "@app.put(\"/thermostat/kb_id\")\n",
     "async def set_kb_id(kb_id: str):\n",
     "    thermostat.kb_id = kb_id\n",
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "# Defining constants\n",
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "outputs": [
     {
      "name": "stdout",
@@ -206,6 +209,7 @@
    "source": [
     "# register API in the knowledge engine\n",
     "import httpx\n",
+    "\n",
     "\n",
     "# Creating a smart connector\n",
     "def create_smart_connector():\n",
@@ -223,6 +227,7 @@
     "    print(response.status_code)\n",
     "    print(response.text)\n",
     "\n",
+    "\n",
     "create_smart_connector()"
    ],
    "metadata": {
@@ -231,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "outputs": [
     {
      "name": "stdout",
@@ -249,6 +254,7 @@
     "    print(response.status_code)\n",
     "    print(response.text)\n",
     "\n",
+    "\n",
     "check_smart_connector()\n"
    ],
    "metadata": {
@@ -257,14 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "200\n",
-      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/f2f54847-55be-4102-9c3e-5ae7a08ceba8\"}\n"
+      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/489aa242-b1e5-4309-9a1d-c464ff068095\"}\n"
      ]
     }
    ],
@@ -290,6 +296,7 @@
     "    print(response.status_code)\n",
     "    print(response.text)\n",
     "\n",
+    "\n",
     "register_answer_ki()\n"
    ],
    "metadata": {
@@ -298,13 +305,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'knowledgeInteractionId': 'http://127.0.0.1:8000/thermostat/interaction/f2f54847-55be-4102-9c3e-5ae7a08ceba8',\n  'knowledgeInteractionType': 'AnswerKnowledgeInteraction',\n  'communicativeAct': {'requiredPurposes': ['https://w3id.org/knowledge-engine/InformPurpose'],\n   'satisfiedPurposes': ['https://w3id.org/knowledge-engine/InformPurpose']},\n  'graphPattern': '?meas <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/saref#Measurement> . ?meas <https://w3id.org/saref#hasValue> ?temp . ?meas <https://w3id.org/saref#isMeasuredIn> <https://w3id.org/saref#TemperatureUnit> . ?meas <https://w3id.org/saref#hasTimestamp> ?timestamp . ?meas <https://w3id.org/saref#isMeasurementOf> ?room_id . ?meas <https://w3id.org/saref#relatesToProperty> <https://w3id.org/saref#Temperature> . ?meas <https://w3id.org/saref#measurementMadeBy> ?device_id . '}]"
+      "text/plain": "[{'knowledgeInteractionId': 'http://127.0.0.1:8000/thermostat/interaction/489aa242-b1e5-4309-9a1d-c464ff068095',\n  'knowledgeInteractionType': 'AnswerKnowledgeInteraction',\n  'communicativeAct': {'requiredPurposes': ['https://w3id.org/knowledge-engine/InformPurpose'],\n   'satisfiedPurposes': ['https://w3id.org/knowledge-engine/InformPurpose']},\n  'graphPattern': '?meas <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://w3id.org/saref#Measurement> . ?meas <https://w3id.org/saref#hasValue> ?temp . ?meas <https://w3id.org/saref#isMeasuredIn> <https://w3id.org/saref#TemperatureUnit> . ?meas <https://w3id.org/saref#hasTimestamp> ?timestamp . ?meas <https://w3id.org/saref#isMeasurementOf> ?room_id . ?meas <https://w3id.org/saref#relatesToProperty> <https://w3id.org/saref#Temperature> . ?meas <https://w3id.org/saref#measurementMadeBy> ?device_id . '}]"
      },
-     "execution_count": 53,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,6 +321,8 @@
     "def list_all_kis():\n",
     "    response = httpx.get(URL + \"/sc/ki\", headers=HEADERS)\n",
     "    return response.json()\n",
+    "\n",
+    "\n",
     "list_all_kis()"
    ],
    "metadata": {
@@ -322,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "200\n",
-      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/f2f54847-55be-4102-9c3e-5ae7a08ceba8\",\"handleRequestId\":1,\"bindingSet\":[],\"requestingKnowledgeBaseId\":\"http://127.0.0.1:8000/subscriber\"}\n",
+      "{\"knowledgeInteractionId\":\"http://127.0.0.1:8000/thermostat/interaction/489aa242-b1e5-4309-9a1d-c464ff068095\",\"handleRequestId\":1,\"bindingSet\":[],\"requestingKnowledgeBaseId\":\"http://127.0.0.1:8000/subscriber\"}\n",
       "200\n",
       "\n"
      ]
@@ -343,23 +352,30 @@
     "    print(response.text)\n",
     "    ki_id = list_all_kis()[-1]['knowledgeInteractionId']\n",
     "    answer_headers = {\n",
-    "         'Content-Type': 'application/json',\n",
-    "         'Knowledge-Base-Id': thermostat.kb_id,\n",
-    "         'Knowledge-Interaction-Id': ki_id,\n",
+    "        'Content-Type': 'application/json',\n",
+    "        'Knowledge-Base-Id': thermostat.kb_id,\n",
+    "        'Knowledge-Interaction-Id': ki_id,\n",
     "    }\n",
-    "    handleRequestId = response.json()[\"handleRequestId\"]\n",
-    "    # deviceName = response.json()[\"bindingSet\"][0][\"deviceName\"]\n",
-    "    answerBindingSet = [] #???\n",
+    "    handle_request_id = response.json()[\"handleRequestId\"]\n",
+    "    answer_binding_set = [{\n",
+    "        \"meas\": \"<https://www.example.org/meas1>\",\n",
+    "        \"temp\": f'\"{thermostat.temperature}\"',\n",
+    "        \"timestamp\": '\"2016-12-01T15:31:10-05:00\"',\n",
+    "        \"room_id\": '\"1\"',\n",
+    "        \"device_id\": '\"id1\"',\n",
+    "    }]\n",
     "\n",
     "    # Answering the handle request\n",
     "    answer_data = {\n",
-    "        \"handleRequestId\": handleRequestId,\n",
-    "        \"bindingSet\": answerBindingSet,\n",
+    "        \"handleRequestId\": handle_request_id,\n",
+    "        \"bindingSet\": answer_binding_set,\n",
     "    }\n",
     "\n",
     "    response = httpx.post(URL + \"/sc/handle\", headers=answer_headers, json=answer_data)\n",
     "    print(response.status_code)\n",
     "    print(response.text)\n",
+    "\n",
+    "\n",
     "handle_and_answer()"
    ],
    "metadata": {
@@ -370,7 +386,15 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "'''?meas rdf:type saref:Measurement .\n",
+    "                            ?meas saref:hasValue ?temp .\n",
+    "                            ?meas saref:isMeasuredIn saref:TemperatureUnit .\n",
+    "                            ?meas saref:hasTimestamp ?timestamp .\n",
+    "                            ?meas saref:isMeasurementOf ?room_id .\n",
+    "                            ?meas saref:relatesToProperty saref:Temperature .\n",
+    "                            ?meas saref:measurementMadeBy ?device_id .'''"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -382,9 +406,32 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [12495]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:35722 - \"GET / HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:56016 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:56016 - \"GET /openapi.json HTTP/1.1\" 200 OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Running the API\n",
     "if __name__ == \"__main__\":\n",
